第一次试运行

--- a/docs/daily/grammar/2025-12-16.md
+++ b/docs/daily/grammar/2025-12-16.md
@@ -1,106 +1,99 @@
 ---
 date: 2025-12-16
-outline: deep
-title: 英语五大基本句式与核心难点解析
+title: 英语五大基本句式与核心难点 (手机版)
+tags: [英语语法, 学习笔记]
 ---
 
+# 📱 英语五大基本句式：核心逻辑通关
 
-> **学习目标**：掌握英语骨架结构，攻克 "双宾语 vs 宾补" 。
-
-
-
-## 🌟 第一部分：五大基本句式 (The 5 Basic Structures)
-
-英语句子千变万化，但归根结底只有这五种骨架。掌握它们，就是掌握了英语的底层逻辑。
-
-### 1. S + V (主语 + 谓语)
-这是最简单的结构，谓语通常是**不及物动词 (vi.)**。
-
-::: info 💡 示例
-* **The sun rose.** (太阳升起了。)
-* **We listened.** (我们听了。)
-:::
-
-### 2. S + V + P (主语 + 系动词 + 表语)
-谓语动词是**系动词 (Link verb)**，如 *be, become, feel, look, sound* 等。表语用来描述主语的状态。
-
-::: info 💡 示例
-* **The food smells good.** (食物闻起来很香。)
-* **I am a student.** (我是一名学生。)
-:::
-
-### 3. S + V + O (主语 + 谓语 + 宾语)
-这是最常见的句型，谓语是**及物动词 (vt.)**，动作有一个承受者。
-
-::: info 💡 示例
-* **I like English.** (我喜欢英语。)
-* **She plays the piano.** (她弹钢琴。)
-:::
-
-### 4. S + V + IO + DO (主 + 谓 + 间宾 + 直宾)
-这里有两个宾语，即**双宾语**。
-* **间接宾语 (IO)**：通常指“人”
-* **直接宾语 (DO)**：通常指“物”
-
-::: tip 🧠 记忆口诀
-人 (IO) 在前，物 (DO) 在后；若物在前，要加 to/for。
-:::
-
-* **He gave me a book.** (他给了我一本书。)
-* = He gave a book **to** me.
-
-### 5. S + V + O + OC (主 + 谓 + 宾 + 宾补)
-**宾语补足语 (OC)** 用来补充说明宾语的情况。如果去掉宾补，句子意思往往不完整或产生歧义。
-
-* **They elected him monitor.** (他们选他当班长。)
-* **We keep the room clean.** (我们保持房间干净。)
+> **🎯 30秒速览**
+> 英语句子千变万化，但骨架只有这 5 种。掌握它们，就掌握了长难句的底层逻辑。
 
 ---
 
-## 🚀 第二部分：核心难点深析
-### 双宾语 vs 宾语补足语 (Double Object vs. Object Complement)
+## 🧩 第一部分：五种骨架 (The 5 Structures)
 
-很多同学分不清 **S+V+IO+DO** 和 **S+V+O+OC**，因为它们看起来都是 `动词 + 名词1 + 名词2`。
+### 1. 主 + 谓 (S + V)
+> **特征**：动作发生了，这就够了。不需要涉及别人。
+> **核心**：不及物动词 (vi.)
 
+* ☀️ **The sun rose.** (太阳升起了)
+* 👂 **We listened.** (我们听了)
 
+---
 
-### ⚔️ 终极判别法： "To Be" 逻辑测试
+### 2. 主 + 系 + 表 (S + V + P)
+> **特征**：不是做动作，而是“描述状态”。
+> **核心**：系动词 (be, feel, look, smell, sound)
 
-这是最简单、最有效的判断方法，请务必记住！
+* 😋 **The food smells good.** (食物闻起来很香)
+* 🎓 **I am a student.** (我是一名学生)
 
-::: warning ⚡ 核心技巧
-在宾语和后面的成分之间加一个 **"is/are"** (是)。
-* **逻辑通顺** ➡️ 它是 **宾补 (OC)**
-* **逻辑荒谬** ➡️ 它是 **双宾语 (IO+DO)**
-:::
+---
 
-#### 场景演练 1：
-> **He made her a cake.** (他给她做了一个蛋糕)
+### 3. 主 + 谓 + 宾 (S + V + O)
+> **特征**：最常见的结构。动作有一个承受者。
+> **核心**：及物动词 (vt.)
 
-* **测试**：Her **is** a cake? (她是蛋糕？)
-* **结果**：❌ 荒谬！人怎么能是蛋糕呢？
-* **结论**：这是 **双宾语**。(Her 是间宾，Cake 是直宾)
+* ❤️ **I like English.** (我喜欢英语)
+* 🎹 **She plays the piano.** (她弹钢琴)
 
-#### 场景演练 2：
-> **He made her happy.** (他让她很开心)
+---
 
-* **测试**：She **is** happy? (她是开心的？)
-* **结果**：✅ 通顺！这完全合理。
-* **结论**：这是 **宾补**。(Happy 补充说明 Her 的状态)
+### 4. 主 + 谓 + 间宾 + 直宾 (S + V + IO + DO)
+> **特征**：涉及“给”的概念。东西给了谁？
+> **口诀**：人 (IO) 在前，物 (DO) 在后。
 
-#### 场景演练 3：
-> **We call him Tom.** (我们叫他 Tom)
+* 🎁 **He gave me a book.** (他给了我一本书)
+* *注：如果物在前，要加 to/for (He gave a book **to** me).*
 
-* **测试**：He **is** Tom? (他是 Tom？)
-* **结果**：✅ 通顺！
-* **结论**：这是 **宾补**。
+---
 
-### 📊 结构对比表
+### 5. 主 + 谓 + 宾 + 宾补 (S + V + O + OC)
+> **特征**：话没说完。只说“选他”没意义，必须补上“当班长”意思才完整。
+> **核心**：补充说明宾语的状态。
 
-| 特征 | 双宾语 (IO + DO) | 宾语补足语 (O + OC) |
+* 🗳️ **They elected him monitor.** (他们选他当班长)
+* 🧹 **We keep the room clean.** (我们保持房间干净)
+
+---
+
+## ⚔️ 第二部分：核心难点攻克
+### ⚠️ 双宾语 vs. 宾语补足语
+
+这是考试和写作中最大的坑。两者长得太像了，结构都是：
+`动词 + 名词1 + 名词2`
+
+> **He made her a cake.** (双宾)
+> **He made her happy.** (宾补)
+>
+> *长得一样，怎么区分？*
+
+### 🚀 终极判别法："To Be" 逻辑测试
+
+**核心技巧**：在两个词中间加一个 **"is" (是)**，看逻辑是否成立。
+
+#### 场景 1：He made **[her] [a cake]**.
+* 🧪 **测试**：Her **is** a cake? (她是蛋糕？)
+* ❌ **结果**：荒谬！$人 \neq 蛋糕$
+* ✅ **结论**：逻辑不通，即为 **双宾语**。
+
+#### 场景 2：He made **[her] [happy]**.
+* 🧪 **测试**：She **is** happy? (她是开心的？)
+* ✅ **结果**：通顺！
+* ✅ **结论**：逻辑成立，即为 **宾补**。
+
+#### 场景 3：We call **[him] [Tom]**.
+* 🧪 **测试**：He **is** Tom? (他是 Tom？)
+* ✅ **结果**：通顺！$他 = Tom$
+* ✅ **结论**：逻辑成立，即为 **宾补**。
+
+---
+
+### 📊 一张表总结
+
+| 维度 | 双宾语 (IO+DO) | 宾语补足语 (O+OC) |
 | :--- | :--- | :--- |
-| **关系** | 两个宾语互不相关 (我 $\neq$ 书) | 宾语和补语有逻辑上的主系表关系 (我 = 班长) |
-| **删减测试** | 去掉后面一个词，句子结构通常仍完整 | 去掉后面一个词，句子意思常残缺 |
-| **常见动词** | give, pass, show, buy, lend | make, find, keep, call, elect |
-
----
+| **逻辑关系** | 我 $\neq$ 书 | 我 $=$ 班长 |
+| **删减测试** | 少一个词，句子通常仍通顺 | 少一个词，意思往往残缺 |
+| **核心动词** | give, buy, lend, show | make, keep, call, find |
