--- a/docs/daily/words/2025-12-16.md
+++ b/docs/daily/words/2025-12-16.md
@@ -2,7 +2,7 @@
 title: 今天积累的单词
 summary: 今天的单词与句型
 date: 2025-12-16 12:00:00 +0800
-permalink: /2025/12/16/article-01/   
+permalink: /test1/    
 ---
 
 <style>
