--- a/docs/daily/grammar/2025-12-17.md
+++ b/docs/daily/grammar/2025-12-17.md
@@ -1,7 +1,6 @@
 ---
 layout: doc
-title: 词性专栏
-date: 2025-12-17
+title: 英语语法片场
 ---
 
 <script setup>
@@ -26,7 +25,7 @@ const boxPos = ref('in')
 </script>
 
 <style>
-/* --- 修复点：将动画定义移到 CSS 最顶层，防止嵌套错误 --- */
+/* 动画定义放在最外层 */
 @keyframes run {
   0% { transform: translateX(0); }
   50% { transform: translateX(100px); }
@@ -54,6 +53,17 @@ const boxPos = ref('in')
   display: block;
 }
 
+/* 列表样式优化 */
+.example-list {
+  margin-top: 10px;
+  padding-left: 20px;
+  line-height: 1.6;
+}
+.example-list li {
+  list-style-type: disc;
+  margin-bottom: 5px;
+}
+
 /* 角色卡片 */
 .actor {
   font-size: 3rem;
@@ -64,7 +74,6 @@ const boxPos = ref('in')
 
 /* 动词动画类 */
 .run-animation {
-  /* 这里引用上面定义的动画 */
   animation: run 2s infinite linear;
 }
 
@@ -147,8 +156,10 @@ const boxPos = ref('in')
   </div>
 </div>
 
-* **专有名词 (Proper Nouns):** 好莱坞巨星，如 `Tom Cruise` 或 `London` (必须大写，这就是大牌的排场)。
-* **普通名词 (Common Nouns):** 群演，如 `actor`, `city`。
+<ul class="example-list">
+  <li><strong>专有名词 (Proper Nouns):</strong> 好莱坞巨星，如 <code>Tom Cruise</code> 或 <code>London</code> (必须大写)。</li>
+  <li><strong>普通名词 (Common Nouns):</strong> 群演，如 <code>actor</code>, <code>city</code>。</li>
+</ul>
 
 ---
 
@@ -183,8 +194,10 @@ const boxPos = ref('in')
 
 名词原本是素颜的，形容词负责给他们穿上戏服，涂上颜色，让他们变得具体。
 
-* `The car` (这辆车) -> 很无聊。
-* `The **red, broken** car` (这辆红色的、坏掉的车) -> 画面感来了。
+<ul class="example-list">
+  <li><code>The car</code> (这辆车) -> 很无聊。</li>
+  <li><code>The <strong>red, broken</strong> car</code> (这辆红色的、坏掉的车) -> 画面感来了。</li>
+</ul>
 
 <div class="grammar-stage">
   <span class="stage-title">Live Demo: 换装间</span>
@@ -207,8 +220,10 @@ const boxPos = ref('in')
 
 副词告诉观众动作是**如何 (How)** 发生的。它是电影里的慢动作镜头、快进镜头或者背景音量。
 
-* **Move** (动) -> `Move **quietly**` (悄悄地动)
-* **Beautiful** (美) -> `**Extremely** beautiful` (极其美)
+<ul class="example-list">
+  <li><strong>Move</strong> (动) -> <code>Move <strong>quietly</strong></code> (悄悄地动)</li>
+  <li><strong>Beautiful</strong> (美) -> <code><strong>Extremely</strong> beautiful</code> (极其美)</li>
+</ul>
 
 ::: details 🔍 怎么辨认副词？
 大部分（但不是全部）以 `-ly` 结尾的词通常是副词。就像贴着 "特效组" 的标签。
@@ -216,9 +231,12 @@ const boxPos = ref('in')
 <em>Quickly, Slowly, Happily...</em>
 :::
 
-在上面的 **动词 Demo** 中，当你点击按钮改变速度时，你实际上是在改变副词：
-* He runs **slowly**.
-* He runs **quickly**.
+在上面的 **动词 Demo** 中，当你点击按钮改变速度时，你实际上是在改变副词（我在这里使用了 HTML 列表以确保渲染）：
+
+<ul class="example-list">
+  <li>He runs <strong>slowly</strong>.</li>
+  <li>He runs <strong>quickly</strong>.</li>
+</ul>
 
 ---
 
