--- a/docs/daily/grammar/2025-12-17.md
+++ b/docs/daily/grammar/2025-12-17.md
@@ -1,6 +1,6 @@
 ---
 layout: doc
-title: 英语语法片场
+title: 英语五大词性
 ---
 
 <script setup>
@@ -275,3 +275,8 @@ const boxPos = ref('in')
 | **形容词**| 戏服 | 装饰演员 | Which one |
 | **副词** | 特效 | 调节气氛 | How |
 | **介词** | 走位 | 空间关系 | Where/When |
+## 🧪 3D 语法实验室
+
+请尝试点击下方的按钮，观察物体的变化。
+
+<GrammarPlanet />
